# ttvm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/ttvm/Platform/: Memory.h  MemoryBlock.h  Platform.h  PlatformError.h
lib/Platform/: CMakeLists.txt  Memory.cpp  MemoryBlock.cpp  Platform.cpp  PlatformError.cpp
unittests/: CMakeLists.txt
unittests/Platform/: CMakeLists.txt  MemoryBlockTest.cpp  PlatformErrorTest.cpp
